--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,9 @@ description: "This is Marvin's first online book"
 
 # This is Marvin
 
-
+```{r, echo=FALSE}
+knitr::include_graphics("images/marvin.png")
+```
 
 # Prerequisites
 
