--- a/docs/bookdown-demo.tex
+++ b/docs/bookdown-demo.tex
@@ -147,6 +147,8 @@
 
 Spicy chicken with peanuts, similar to what is served in Chinese restaurants. It is easy to make, and you can be as sloppy with the measurements as you want. They reduce to a nice, thick sauce. Substitute cashews for peanuts, or bamboo shoots for the water chestnuts. You can't go wrong! Enjoy!
 
+\includegraphics{images/kongpaochicken.png}
+
 \hypertarget{ingredients}{%
 \section{Ingredients}\label{ingredients}}
 
